@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Keep pointer to region instead of just the name.
+ utils/mapper.c
+Nicolas Weeger, 2008-02-03
+
 Major refactoring, to prepare for more fun things.
  utils/mapper.c
 Nicolas Weeger, 2008-02-03
